--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"><title>Index of /alectronical.github.io</title></head>
-<body bgcolor="black"><h1>Index of /alectronical.github.io</h1><hr>
+<body bgcolor="white"><h1>Index of /alectronical.github.io</h1><hr>
 <br>
 <a href="plugin.video.grogu-master.zip">plugin.video.grogu-0.02.zip</a>              
 <hr>
