--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"><title>Index of /alectronical.github.io</title></head>
 <body bgcolor="white"><h1>Index of /alectronical.github.io</h1><hr>
 <br>
-<a href="plugin.video.grogu-master.zip">plugin.video.grogu-0.02.zip</a>              
+<a href="plugin.video.grogu-0.02.zip">plugin.video.grogu-0.02.zip</a>              
 <hr>
 
 </body></html>
